fix(Upload): Fixed upload blurred style

--- a/src/components/screens/Account/__partials__/EditProfile/styles.less
+++ b/src/components/screens/Account/__partials__/EditProfile/styles.less
@@ -6,7 +6,7 @@
   }
 }
 .visibility {
-    width: 100% !important;
+  width: 100% !important;
   .ant-select-selector {
     height: 100% !important;
     border: none !important;
@@ -19,14 +19,17 @@
       background-color: @white_50 !important;
     }
     .ant-select-selection-item {
-      padding: 10px 10px !important;
+      padding: 10px 4px !important;
       display: flex;
       align-items: center;
     }
   }
+  .ant-select-arrow {
+    padding-right: 13px !important;
+  }
 }
 .ant-select-dropdown {
-  padding: 8px 10px !important;
+  padding: 8px 3px !important;
   border: none !important;
   border-radius: 12px !important;
   background-color: @black_25 !important;
