--- a/src/components/screens/Upload/styles.less
+++ b/src/components/screens/Upload/styles.less
@@ -7,11 +7,17 @@
     padding: 89px 0;
     border: 1px dashed @white_50;
     border-radius: 43px;
+    img {
+      min-height: 127px;
+    }
   }
 }
 .cover-image {
   padding: 39px 59px 31px !important;
   text-align: center;
+  img {
+    min-height: 200px;
+  }
   .dray-and-drop {
     padding: 56px;
     border: 1px dashed @white_50;
